[gd_scene load_steps=13 format=3 uid="uid://cydwpoipuoe8x"]

[ext_resource type="Script" uid="uid://dmr5vy4s24yly" path="res://objects/TheWindowSystem/window_ui.gd" id="1_rfedv"]
[ext_resource type="Texture2D" uid="uid://d22elfinooomh" path="res://assets/images/ui/windows/bgpanel.png" id="2_aeolc"]
[ext_resource type="FontFile" uid="uid://bh8by4nhlf6md" path="res://assets/Jersey_15/Jersey15-Regular.ttf" id="3_kpmoa"]
[ext_resource type="Texture2D" uid="uid://c6xj8pxoysayl" path="res://assets/images/ui/buttons/Xv1.png" id="4_v5qpa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nsapq"]
texture = ExtResource("2_aeolc")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="ViewportTexture" id="ViewportTexture_rfedv"]
viewport_path = NodePath("Panel/SubViewport")

[sub_resource type="Gradient" id="Gradient_v5qpa"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0.0022522523, 1)
colors = PackedColorArray(0.74, 0.7876666, 1, 1, 0, 0.036999788, 0.74, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_aeolc"]
gradient = SubResource("Gradient_v5qpa")
width = 8
height = 8
fill_from = Vector2(1, 1)
fill_to = Vector2(0.32264957, 0.99358976)

[sub_resource type="Gradient" id="Gradient_kpmoa"]
interpolation_mode = 2
interpolation_color_space = 2
colors = PackedColorArray(1, 1, 1, 1, 0.38, 0.38, 0.38, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_v5qpa"]
gradient = SubResource("Gradient_kpmoa")
width = 8
height = 8
fill_from = Vector2(1, 1)
fill_to = Vector2(0.32264957, 0.99358976)

[sub_resource type="LabelSettings" id="LabelSettings_kpmoa"]
font = ExtResource("3_kpmoa")
font_size = 20

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kpmoa"]
resource_local_to_scene = true
size = Vector2(500, 527)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_rfedv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 500.0
offset_bottom = 527.0
theme_override_styles/panel = SubResource("StyleBoxTexture_nsapq")

[node name="TextureRect2" type="TextureRect" parent="Panel"]
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 29.743998
offset_right = -6.0
offset_bottom = -7.2559814
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_rfedv")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Panel"]
texture_filter = 2
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 25.0
grow_horizontal = 2
texture = SubResource("GradientTexture2D_aeolc")
expand_mode = 1

[node name="unactive" type="TextureRect" parent="Panel/TextureRect"]
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_v5qpa")
expand_mode = 1

[node name="windownamelabel" type="Label" parent="Panel/TextureRect"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -17.0
offset_right = -2.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "ludzik_xd.exe"
label_settings = SubResource("LabelSettings_kpmoa")
vertical_alignment = 1
text_overrun_behavior = 1

[node name="exitbutton" type="Button" parent="Panel/TextureRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -13.0
offset_right = 3.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
icon = ExtResource("4_v5qpa")
flat = true
icon_alignment = 1
expand_icon = true

[node name="buttons" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Topbar" type="Button" parent="Panel/buttons"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = -27.0
offset_bottom = 29.0
grow_horizontal = 2
focus_mode = 0
mouse_filter = 1
flat = true

[node name="Button2" type="Button" parent="Panel/buttons"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -12.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
flat = true

[node name="Button3" type="Button" parent="Panel/buttons"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 8.0
grow_vertical = 2
focus_mode = 0
flat = true

[node name="Button4" type="Button" parent="Panel/buttons"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
flat = true

[node name="Button5" type="Button" parent="Panel/buttons"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
flat = true

[node name="Button6" type="Button" parent="Panel/buttons"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
focus_mode = 0
flat = true

[node name="focusbutton" type="Button" parent="Panel/buttons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_filter = 1
flat = true

[node name="SubViewport" type="SubViewport" parent="Panel"]
physics_object_picking = true
size = Vector2i(500, 300)

[node name="StaticBody2D" type="StaticBody2D" parent="Panel"]
collision_layer = 4
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Panel/StaticBody2D"]
position = Vector2(250, 300)
shape = SubResource("RectangleShape2D_kpmoa")

[node name="ColorRect" type="ColorRect" parent="Panel/StaticBody2D/CollisionShape2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.00999999999999999
one_shot = true

[connection signal="pressed" from="Panel/TextureRect/exitbutton" to="." method="_on_exitbutton_pressed"]
[connection signal="button_down" from="Panel/buttons/Topbar" to="." method="_on_topbar_button_down"]
[connection signal="button_up" from="Panel/buttons/Topbar" to="." method="_on_topbar_button_up"]
[connection signal="button_down" from="Panel/buttons/focusbutton" to="." method="_on_focusbutton_button_down"]
[connection signal="pressed" from="Panel/buttons/focusbutton" to="." method="_on_focusbutton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
